Spring LDAP CHANGELOG
=====================
http://www.springframework.org/ldap

http://www.ietf.org/rfc/rfc1960.txt
http://www.ietf.org/rfc/rfc2251.txt
http://www.ietf.org/rfc/rfc2252.txt
http://www.ietf.org/rfc/rfc2253.txt
http://www.ietf.org/rfc/rfc2254.txt
http://www.ietf.org/rfc/rfc2255.txt
http://www.ietf.org/rfc/rfc2256.txt
http://www.ietf.org/rfc/rfc2696.txt

Changes in version 1.3.1 (October 2010)
-------------------------------------------
* Added an object-directory mapping framework (ODM). Contributed by Paul
  Harvey.

* Added an LDIF parsing framework. Contributed by Keith Barlow.

* Added an extension to ContextMapperCallbackHandler that can provide the
  associated mapper with an indication that the response is different for
  each search result. (LDAP-185)

* AbstractTlsDirContextAuthenticationStrategy now provides a setter for
  customizing SSLSocketFactory used for TLS negotiation. (LDAP-180)

* DirContextAdapter.getObjectAttribute now returns null if the attribute
  exists but with no value. Added method attributeExists for cases where
  it has to be detected whether it was one or the other. (LDAP-215)

* Added LookupAttemptingCallback for performing operation in authenticated
  context. (LDAP-203)

* Added utility methods for converting a Windows security identifier (SID)
  between a binary format and a slightly more readable string format.
  http://msdn.microsoft.com/en-us/library/aa379571%28VS.85%29.aspx
  (LDAP-187)

* Added authentication methods that provide a possible authentication
  exception through an AuthenticationErrorCallback. (LDAP-192)

* Authentication methods now treat a search result of more than one user as
  an error and throw IncorrectResultSizeDataAccessException. (LDAP-170)
  
* Authentication methods now log problems at level INFO rather than ERROR.
  (LDAP-170)
  
* DefaultDirObjectFactory calls a Java5 version of the IllegalArgumentException
  constructor. (LDAP 196).
