@@ -76,6 +76,9 @@
 		<contributor>
 			<name>Paul Harvey</name>
 		</contributor>
+		<contributor>
+			<name>Marvin S. Addison</name>
+		</contributor>
 	</contributors>
 	<organization>
 		<name>The Spring LDAP Framework</name>
