@@ -10,6 +10,7 @@ http://www.ietf.org/rfc/rfc2254.txt
 http://www.ietf.org/rfc/rfc2255.txt
 http://www.ietf.org/rfc/rfc2256.txt
 http://www.ietf.org/rfc/rfc2696.txt
+http://www.ietf.org/rfc/rfc2829.txt
 
 Changes in version 1.3.1 (October 2010)
 -------------------------------------------
@@ -46,6 +47,10 @@ Changes in version 1.3.1 (October 2010)
 * Authentication methods now log problems at level INFO rather than ERROR.
   (LDAP-170)
   
+* DIGEST-MD5 SASL authentication mechanism is now supported, as specified by
+  RFC 2829 (see http://www.ietf.org/rfc/rfc2829.txt, section 4). (LDAP-173)
+  Contributed by Marvin S. Addison.
+
 * DefaultDirObjectFactory calls a Java5 version of the IllegalArgumentException
   constructor. (LDAP 196).
 
